Changes for Perl extension File-HomeDir

0.90_01 Thu  7 Jan 2010
	- WARNING: This release introduces a major backwards incompatibility
	  for Unix users. The results returned by most methods may change.
	- Added complete implementation of the FreeDesktop specification and
	  auto-detection of the Unix hosts to which it applies (JQUELIN)

0.89 Sun  3 Jan 2010
	- Loosen the testing intensity on Darwin Carbon backends to prevent
	  issues with consumer directories prevent installation entirely.

0.88 Tue 24 Nov 2009
	- Switching to a production release

0.87_01 Sat  3 Oct 2009
	- First developer implementation of improved Mac support

0.86 Fri 27 Mar 2009
	- Bug fix for the 64-bit implementation

0.85_01 Fri 27 Mar 2009
	- For 64-bit perl on Darwin, fall back to File::HomeDir::Unix
	  as Mac::Carbon is not available

0.84 Wed 11 Mar 2009
	- Adds support for $ENV{HOME} on Darwin
	- Other bug fixes on Darwin (MIYAGAWA)

0.83_01 Sat  1 Nov 2008
	- Patch from Darin McBride to fix user_home on Darwin.

0.82 Tue 14 Oct 2008
	- When we get more than one warning, diag the warnings 
	  so that we have actually have a chance to get rid of
	  the extra warnings.

0.81 Thu  3 Jul 2008
	- Updating to Module::Install 0.77
	- Localising $@ during evals
	- Updating Perl version dependency to 5.00503

0.80 Fri 27 Jun 2008
	- All clear on the CPAN Testers front, flipping to production

0.71_03 Wed 25 Jun 2008
	- Removing the Server 2003 and 2008 skips that should work
	  now that we create directories on demand.
	- File::HomeDir should now support "Perl on a Stick"

0.71_02 Mon 28 Apr 2008
	- Added `my_dot_config`.
	- Adding a base driver class.

0.71_01 Fri  4 Apr 2008
	- Converted from Registry checks to Win32 calls.
	  This includes giving it the "create directory" call.
	- Removing the dependency on the registry modules.

0.70    Fri 28 Feb 2008
	- Windows Server 2003 does not have Music/Pictures/etc directories
	  (correct the test to not expect them to exist)