@@ -9,7 +9,7 @@ BEGIN {
 }
 use File::Spec::Functions ':ALL';
 
-use Test::More tests => 8;
+use Test::More tests => 11;
 
 # This module is destined for the core.
 # Please do NOT use convenience modules
@@ -17,11 +17,14 @@ use Test::More tests => 8;
 
 ok( $] > 5.00503, 'Perl version is 5.005 or newer' );
 
-use_ok( 'File::HomeDir::Driver'  );
-use_ok( 'File::HomeDir::Unix'    );
-use_ok( 'File::HomeDir::Darwin'  );
-use_ok( 'File::HomeDir::Windows' );
-use_ok( 'File::HomeDir::MacOS9'  );
-use_ok( 'File::HomeDir'          );
+use_ok( 'File::HomeDir::Driver'         );
+use_ok( 'File::HomeDir::Unix'           );
+use_ok( 'File::HomeDir::FreeDesktop'    );
+use_ok( 'File::HomeDir::Darwin'         );
+use_ok( 'File::HomeDir::Darwin::Carbon' );
+use_ok( 'File::HomeDir::Darwin::Cocoa'  );
+use_ok( 'File::HomeDir::Windows'        );
+use_ok( 'File::HomeDir::MacOS9'         );
+use_ok( 'File::HomeDir'                 );
 
 ok( defined &home, 'Using File::HomeDir exports home()' );
